# Librarian

./: .env.example  .gitignore  PROJECT_DESIGN.md  README.md  docker-compose.librarian.yml  docker-compose.standalone.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: main.py
backend/app/services/: __init__.py  audiobookshelf.py  jackett.py  transmission.py
docker/: Dockerfile
frontend/: Dockerfile  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/downloads/: page.tsx
frontend/src/app/recommended/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: DownloadsPage.tsx  Library.tsx  Player.tsx  SearchPage.tsx  SettingsPage.tsx  Sidebar.tsx
